--- a/stamped/package.json
+++ b/stamped/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vis.gl/react-google-maps": "^1.5.2",
+    "dotenv": "^16.5.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
