--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,16 @@
   "description": "",
   "dependencies": {
     "@types/express": "^5.0.1",
+    "exif-parser": "^0.1.12",
+    "exifr": "^7.1.3",
     "express": "^5.1.0",
+    "googleapis": "^148.0.0",
+    "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "devDependencies": {
+    "@types/multer": "^1.4.12"
   }
 }
