--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/env": "^15.3.1",
     "@vis.gl/react-google-maps": "^1.5.2",
+    "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.9.2",
     "next": "15.3.1",
