--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     "googleapis": "^148.0.0",
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.10",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
