--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node dist/app.js",
     "dev": "nodemon",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "db:init": "ts-node ./src/db/init.ts"
   },
   "keywords": [],
   "author": "",
