--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "exifr": "^7.1.3",
     "express": "^5.1.0",
     "googleapis": "^148.0.0",
+    "mime-types": "^3.0.1",
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.10",
     "sqlite": "^5.1.1",
@@ -28,5 +29,6 @@
   },
   "devDependencies": {
     "@types/multer": "^1.4.12"
-  }
+  },
+  "type": "module"
 }
