--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "start": "node dist/app.js",
     "dev": "nodemon",
     "build": "tsc -p .",
+    "build-run": "tsc -p . && node dist/app.js",
     "db:init": "ts-node ./src/db/init.ts"
   },
   "keywords": [],
