--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node dist/app.js",
     "dev": "nodemon",
-    "build": "tsc -p .",
+    "build": "npm i && tsc -p .",
     "build-run": "tsc -p . && node dist/app.js",
     "db:init": "ts-node ./src/db/init.ts && ts-node ./src/db/mock.ts"
   },
