--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,8 @@
     "typescript": "^5.8.3"
   },
   "devDependencies": {
-    "@types/multer": "^1.4.12"
+    "@types/cors": "^2.8.17",
+    "@types/multer": "^1.4.12",
+    "cors": "^2.8.5"
   }
 }
