--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "@types/node": "^20.17.31",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "cors": "^2.8.5",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4",
